--- a/3_kubernetes/deployment.yaml
+++ b/3_kubernetes/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: myapp
 spec:
   selector:
     matchLabels:
-      app: nginx
+      app: myapp
   replicas: 2 # tells deployment to run 2 pods matching the template
   template:
     metadata:
       labels:
-        app: nginx
+        app: myapp
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.7.9
+      - name: myapp
+        image: rbekker87/node-containername
         ports:
-        - containerPort: 80
+        - containerPort: 8080
