--- a/3_kubernetes/deployment.yaml
+++ b/3_kubernetes/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: rbekker87/node-containername
+        image: cklein/node-hostname:0.0.2
         ports:
-        - containerPort: 8080
+        - containerPort: 3000
